samples/_failures_safe/1761349520_14b4ed_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ae2f25b8.c: In function ‘main’:
./samples/SAFE/__tmp_ae2f25b8.c:152:5: error: expected declaration or statement at end of input
  152 |     input_matrix(&b, "B");
      |     ^~~~~~~~~~~~
